--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <meta name="twitter:image" content="https://lepakmasjid.app/lepak-masjid.png" />
     <meta name="twitter:image:alt" content="Lepak, Solat & Beraktiviti di Masjid" />
 
+    <!-- Umami Analytics -->
+    <script defer src="https://umami.muazhazali.me/script.js" data-website-id="9a2dfd56-7dcf-49d3-b40a-afc2f3e85cca"></script>
+
   </head>
 
   <body>
