--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:image:alt" content="Lepak, Solat & Beraktiviti di Masjid" />
 
     <!-- Umami Analytics -->
-    <script defer src="https://umami.muazhazali.me/script.js" data-website-id="9a2dfd56-7dcf-49d3-b40a-afc2f3e85cca"></script>
+   <script defer src="https://cloud.umami.is/script.js" data-website-id="28d065da-1a91-4752-bac4-adb5e4d6df1c"></script>
 
   </head>
 
